tp2_p2/hls/axis-to-aximm/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
WARNING: [HLS 200-40] Skipped source file 'axis_to_aximm'. Source files must have extensions .c, .C, .cc, .cpp, .c++, .cp, or .cxx.
INFO: [HLS 200-10] Analyzing design file 'axis-to-aximm/axis_to_aximm.cpp' ... 
WARNING: [HLS 200-40] axis-to-aximm/axis_to_aximm.cpp:2:10: fatal error: 'incrust.h' file not found
#include "incrust.h"
         ^
1 error generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
WARNING: [HLS 200-40] Skipped source file 'axis_to_aximm'. Source files must have extensions .c, .C, .cc, .cpp, .c++, .cp, or .cxx.
INFO: [HLS 200-10] Analyzing design file 'axis-to-aximm/axis_to_aximm.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from axis-to-aximm/axis_to_aximm.cpp:1:
axis-to-aximm/axis_to_aximm.cpp:29:73: error: expected expression
  memcpy((ap_uint<8> *)(mem_ddr+(i*hsize_in)),(ap_uint<8> *) mem_locale,,hsize_in);
                                                                        ^
1 error generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
WARNING: [HLS 200-40] Skipped source file 'axis_to_aximm'. Source files must have extensions .c, .C, .cc, .cpp, .c++, .cp, or .cxx.
INFO: [HLS 200-10] Analyzing design file 'axis-to-aximm/axis_to_aximm.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:02 ; elapsed = 00:00:24 . Memory (MB): peak = 197.414 ; gain = 105.094
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:02 ; elapsed = 00:00:24 . Memory (MB): peak = 197.414 ; gain = 105.094
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:03 ; elapsed = 00:00:25 . Memory (MB): peak = 197.414 ; gain = 105.094
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:00:03 ; elapsed = 00:00:25 . Memory (MB): peak = 204.277 ; gain = 111.957
INFO: [XFORM 203-502] Unrolling all sub-loops inside loop 'Loop-1' (axis-to-aximm/axis_to_aximm.cpp:15) in function 'axis_to_aximm' for pipelining.
WARNING: [XFORM 203-503] Cannot unroll loop 'Loop-1.1' (axis-to-aximm/axis_to_aximm.cpp:18) in function 'axis_to_aximm': cannot completely unroll a loop with a variable trip count.
WARNING: [XFORM 203-503] Cannot unroll loop 'memcpy.mem_ddr.V.mem_locale.V.addr' (axis-to-aximm/axis_to_aximm.cpp:29) in function 'axis_to_aximm': cannot completely unroll a loop with a variable trip count.
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:00:03 ; elapsed = 00:00:26 . Memory (MB): peak = 250.105 ; gain = 157.785
WARNING: [XFORM 203-542] Cannot flatten a loop nest 'Loop-1' (axis-to-aximm/axis_to_aximm.cpp:15:15) in function 'axis_to_aximm' : 

more than one sub loop.
INFO: [HLS 200-444] Inferring multiple bus burst write of variable length on port 'gmem' (axis-to-aximm/axis_to_aximm.cpp:29:3). These data requests might be further partitioned to multiple requests during RTL generation, based on max_read_burst_length or max_write_burst_length settings.
INFO: [HLS 200-472] Inferring partial write operation for 'mem_locale.V' (axis-to-aximm/axis_to_aximm.cpp:22:10)
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:00:04 ; elapsed = 00:00:26 . Memory (MB): peak = 259.793 ; gain = 167.473
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'axis_to_aximm' ...
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'axis_to_aximm' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
WARNING: [SCHED 204-65] Unable to satisfy pipeline directive: Loop contains subloop(s) not being unrolled or flattened.
INFO: [SCHED 204-61] Pipelining loop 'memcpy.mem_ddr.V.mem_locale.V.addr'.
INFO: [SCHED 204-61] Pipelining result : Target II = 1, Final II = 1, Depth = 3.
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 25.935 seconds; current allocated memory: 189.445 MB.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 0.114 seconds; current allocated memory: 189.702 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'axis_to_aximm' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/gmem' to 'm_axi'.
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_data_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_keep_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_strb_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_user_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_last_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_id_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/s_axis_video_V_dest_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/mem_ddr_V' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/hsize_in' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on port 'axis_to_aximm/vsize_in' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on function 'axis_to_aximm' to 'ap_ctrl_hs'.
INFO: [SYN 201-210] Renamed object name 'axis_to_aximm_mem_locale_V' to 'axis_to_aximm_membkb' due to the length limit 20
INFO: [RTGEN 206-100] Finished creating RTL model for 'axis_to_aximm'.
INFO: [HLS 200-111]  Elapsed time: 0.236 seconds; current allocated memory: 190.467 MB.
INFO: [HLS 200-790] **** Loop Constraint Status: All loop constraints were satisfied.
INFO: [HLS 200-789] **** Estimated Fmax: 114.29 MHz
INFO: [RTMG 210-278] Implementing memory 'axis_to_aximm_membkb_ram (RAM)' using block RAMs.
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:00:05 ; elapsed = 00:00:28 . Memory (MB): peak = 259.793 ; gain = 167.473
INFO: [VHDL 208-304] Generating VHDL RTL for axis_to_aximm.
INFO: [VLOG 209-307] Generating Verilog RTL for axis_to_aximm.
INFO: [HLS 200-112] Total elapsed time: 28.327 seconds; peak allocated memory: 190.467 MB.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [IMPL 213-8] Exporting RTL as a Vivado IP.
